[package]
name = "inverted-pin"
version = "1.0.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/inverted-pin-rs"
license = "MIT OR Apache-2.0"
description = "Embedded-hal input/output pin trait implementations with inverted level logic."
readme = "README.md"
keywords = ["io", "gpio", "inverted", "pin", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/inverted-pin-rs"
documentation = "https://docs.rs/inverted-pin"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"]}
dummy-pin = "1.0.0"

[profile.release]
lto = true
